<resources>
    <string name="app_name">百姓信息网</string>
    <string name="register_input">为了您的账号安全，请绑定手机号码并设置登录密码。后续可通过手机号+密码登录。</string>
    <string name="home_title">百姓信息网</string>
    <string name="home_title_desc">百姓信息网</string>

    <string name="dunhua">敦化</string>
    <string name="antu">安图</string>
    <string name="yanji">延吉</string>
    <string name="helong">和龙</string>
    <string name="wangqing">汪清</string>
    <string name="longjing">龙井</string>
    <string name="huichun">珲春</string>
    <string name="tumen">图们</string>
    <string name="lang_select">언어변경</string>
    <string name="phone_verify">验证码登录</string>

    <string name="lang_ko">조선어</string>
    <string name="lang_ch">中文</string>

    <string name="str_ok">确定</string>
    <string name="str_login">登录</string>
    <string name="str_cancel">取消</string>
    <string name="success">成功</string>

    <string name="choose_hospital">选择医院</string>
    <string name="search_hospital_hint">按医院搜索</string>
    <string name="choose_department">选择科室</string>
    <string name="choose_doctor">选择医生</string>
    <string name="dep_internal">内科</string>
    <string name="dep_surgery">外科</string>
    <string name="dep_other">其他</string>
    <string name="medical_fee">诊疗费:</string>
    <string name="fee_unit">元</string>
    <string name="choose_appoint">选择日期和时间</string>
    <string name="view_summary">查看简历</string>
    <string name="call_phone">电话预约</string>
    <string name="possible_date">就诊</string>
    <string name="rest_date">休诊</string>
    <string name="str_year">年</string>
    <string name="str_month">月</string>
    <string name="str_day">日</string>
    <string name="str_minute">分</string>
    <string name="str_second">秒</string>
    <string name="possible_appoint">空</string>
    <string name="impossible_appoint">满</string>
    <string name="other_doctors"> 其他医生</string>
    <string name="self_info">本人</string>
    <string name="self">本人</string>
    <string name="add">新增</string>
    <string name="add_family">添加就诊人</string>
    <string name="gender">性别</string>
    <string name="birthday">生年月日</string>
    <string name="certification">身份证号</string>
    <string name="mobile">手机号</string>
    <string name="modify_info">信息修改</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="input_family_info">添加就诊人信息</string>
    <string name="name">姓名</string>
    <string name="relation">关系</string>
    <string name="next">下一步</string>
    <string name="appoint_info">预约信息</string>
    <string name="assigned_doctor">责任医师</string>
    <string name="hospital">医院</string>
    <string name="job">职务</string>
    <string name="date_time">日期/时间</string>
    <string name="medical_fee1">诊疗费</string>
    <string name="interview_exam">门诊</string>
    <string name="floor">楼</string>
    <string name="success_appoint">预约成功!</string>
    <string name="login">Log In</string>
    <string name="log_in">登录</string>
    <string name="login_member">会员登录</string>
    <string name="login_desc">一键登录</string>
    <string name="login_weixin">微信登录</string>
    <string name="login_qq">QQ登录</string>
    <string name="phone_number">手机码</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
	<string name="member_register">会员注册</string>
    <string name="new_register">新用户注册</string>
    <string name="forgot_password">忘记密码</string>
    <string name="recover_password">找回密码</string>
    <string name="send_verify_code">获取验证码</string>
    <string name="verify_code">短信验证码</string>
	<string name="policy">注册则代表您同意《百姓信息网服务协议》</string>
    <string name="left_time">验证码大约需要</string>
    <string name="set_password">设置密码, 6-11位</string>
	<string name="set_compare_password">请重新输入一遍您的密码</string>
    <string name="input_new_password">重置密码</string>
	<string name="verify_left_time">3分钟后重新获取</string>
    <string name="register_patient_info">患者信息登录</string>
    <string name="update_patient_info">患者信息更新</string>
    <string name="verify">验证</string>
    <string name="success_register">注册成功!</string>
    <string name="success_update">更新成功!</string>
    <string name="appoint_help">就医助手</string>
    <string name="appoint_alarm">预约提醒</string>
    <string name="line_alarm">排队叫号</string>
    <string name="report_alarm">报告单提醒</string>
    <string name="cancel_appoint">取消预约</string>
    <string name="patient_name">患者名：</string>
    <string name="patient_name1">患者姓名</string>
    <string name="note">注意事项</string>
    <string name="wait_time">大约等待时间</string>
    <string name="wait_patients">等待人数</string>
    <string name="patient_unit">名</string>
    <string name="job_doctor">职务 / 医师</string>
    <string name="medical_date_time">筛选日期</string>
    <string name="report_note">接到报告</string>
    <string name="more">更多</string>
    <string name="me">我</string>
    <string name="appoint_history">预约记录</string>
    <string name="reappoint">复诊预约</string>
    <string name="appoint">预约</string>
    <string name="online_appoint">预约</string>
    <string name="health_article">健康专栏</string>
    <string name="search_hint">搜索</string>
    <string name="recommend_doctor">推荐医生</string>
    <string name="news">新消息</string>
    <string name="expert_appoint">专家预约</string>
    <string name="medical_time">就诊时间</string>
    <string name="special">擅长</string>
    <string name="summary_introduce">简介</string>
    <string name="view_map">查看地图</string>
    <string name="processing">在装载中 &#8230;</string>
    <string name="family_info">就诊人</string>
    <string name="set_date">设定日期</string>
    <string name="str_logout">退出</string>
    <string name="str_exit">关闭</string>
    <string name="platform_introduce">平台简介</string>
    <string name="department">科室</string>

    <string name="please_input_info">请输入举报理由</string>
    <string name="please_check_icon">为家属选择头像</string>
    <string name="please_choose_patient">选择就诊患者</string>
    <string name="password_hint">请输入密码</string>
    <string name="login_desc1">请输入用户名或者手机号</string>
    <string name="login_desc2">初次使用患者请先注册</string>
    <string name="recover_password_desc">请输入您要找回密码的手机号按验证码健</string>
    <string name="verify_desc">请输入手机号和验证码按确认健</string>
    <string name="confirm_cancel_appoint">确定要取消预约吗？</string>
    <string name="please_choose_patient_to_reappoint">请选择复诊患者</string>
    <string name="please_input_name">请输入您的姓名</string>
    <string name="please_input_birthday">请输入生年月日</string>
    <string name="please_input_certification">请输入身份证号</string>
    <string name="please_input_mobile">请输入手机号</string>
    <string name="please_input_verify_code">请输入验证码</string>
    <string name="verify_code_incorrect">验证码不正确</string>
    <string name="please_verify_code">请确认验证码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_new_password">请输入新密码</string>
    <string name="password_updated_successfully">密码更新成功</string>
    <string name="password_update_failed">密码更新失败</string>
    <string name="error_message">网络错误 请再试一次</string>
    <string name="error_db">数据库错误</string>
    <string name="in_use_phone">该电话号码已在使用 请输入其他号码</string>
    <string name="mobile_error">手机号码格式不对 请再输入一遍</string>
    <string name="password_error">密码只要为6位数字 请再输入密码</string>
    <string name="login_error">电话号码或密码有错误</string>
    <string name="phone_error">该号码未注册</string>
    <string name="token_error">未认证令牌</string>
    <string name="please_input_relation">请输入关系</string>
    <string name="canceled_appoint">预约已被取消</string>
    <string name="confirm_finish">您确定要关闭？</string>
    <string name="no_phone">没有手机号</string>
    <string name="registered_phone">该号码已在使用</string>
    <string name="message_error_identify_inuse">该身份证号码已在使用 请输入其他号码</string>
    <string name="message_error_identify_format">身份证号码格式不对</string>
    <string name="introduce">延边预约挂号服务平台，是在延边州卫计委的指导和大力支持下，由延边维康信息技术有限公司根据延边州情，深度研发打造的高效公益综合医疗服务平台。\n平台面向全州医院和患者，免费提供24小时的就诊预约等综合服务，患者能够方便地通过电话、手机、微信、互联网终端设备等综合通信工具访问平台（微信公众号：yuyue_yb， 网址：www.ybyuyue.com）， 节约大量的挂号就诊时间，享受高效便捷的综合医疗服务。截至目前，包括延边大学附属医院、延边第二医院、延边妇幼保健院等在内的州内14家二甲和三甲公立医院入驻平台，开展网上预约就诊服务，平台每月平均受理预约就诊量达到15000多人次。\n未来，维康信息将紧扣我州医疗服务发展需求，更加努力地致力于完善平台功能，提高平台为医院和患者服务的能力和水平，更加有效地推动全州医疗卫生服务资源汇聚，有力促进全州医疗信息化服务进程，推动民生福祉持续提高！</string>
	
	<string name="home_room">房屋出售</string>
	<string name="home_tax">房屋出租</string>
	<string name="home_house">店铺出兑</string>
	<string name="home_invite">招聘信息</string>
	<string name="home_history">求职简历</string>
	<string name="home_service">便民服务</string>
	<string name="home_car">车辆交易</string>
	<string name="home_old">二手买卖</string>
	<string name="home_dazhe">打折促销</string>
	<string name="home_join">招商加盟</string>
	<string name="home_anniver">婚姻交友</string>
	<string name="home_educate">教育培训</string>
	<string name="home_call">电话号码</string>
	<string name="home_outland">出国资讯</string>
	<string name="home_animal">宠物天地</string>
	<string name="home_travel">旅游专栏</string>
	<string name="home_wait">敬请期待</string>
    <string name="report_received_message">已举报，处理结果将以站内信的形式发送给您</string>
    <string name="report_fill_message">请输入举报理由</string>
    <string name="delete_news_message">确定删除吗</string>
    <string name="change_phone">点击确定立即发送验证码</string>
</resources>
