<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:background="@drawable/top_title_shape">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/set_date"
            android:textColor="@color/colorDialog"
            android:textSize="19.8sp"
            android:gravity="center"
            android:layout_marginLeft="20dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorDialog"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>
    <DatePicker
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:theme="@style/AppTheme.Picker"
        android:layout_gravity="center"
        android:background="@color/colorBackground"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="46dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/str_cancel"
                android:id="@+id/btn_cancel"
                android:textSize="15.4sp"
                android:layout_weight="1"
                android:textColor="@color/colorDialog"
                android:background="@drawable/btn_left_selector"
                android:textStyle="bold" />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/str_ok"
                android:id="@+id/btn_ok"
                android:background="@drawable/btn_right_selector"
                android:textSize="15.4sp"
                android:layout_weight="1"
                android:textColor="@color/colorDialog"
                android:textStyle="bold" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDialog"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorDialog"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</LinearLayout>
