<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.reservation.app.baixingxinwen.fragment.LineAlarmFragment"
    android:background="@color/colorBackground">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/txt_room_title"
            android:textColor="@color/colorConfirmText"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="105dp"
            android:id="@+id/imageView7"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/navi_wait"
            android:layout_marginBottom="10dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:weightSum="2"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wait_patients"
                        android:textColor="@color/colorTabText"
                        android:textSize="13.2sp"
                        android:layout_gravity="center_horizontal"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/patient_unit"
                        android:id="@+id/txt_wait_patients"
                        android:textColor="@color/colorConfirmText"
                        android:textSize="27sp"
                        android:layout_gravity="center_horizontal" />
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/colorLineLight"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="left"
                    android:layout_marginLeft="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wait_time"
                        android:textColor="@color/colorTabText"
                        android:textSize="13.2sp"
                        android:layout_gravity="center_horizontal"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_minute"
                        android:id="@+id/txt_wait_time"
                        android:textColor="@color/colorConfirmText"
                        android:textSize="27sp"
                        android:layout_gravity="center_horizontal" />
                    </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
