<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.reservation.app.baixingxinwen.activity.InputFamilyInfoActivity"
    android:background="@color/colorBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:id="@+id/lyt_title">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_input_info"
            android:id="@+id/textView5"
            android:layout_alignParentTop="false"
            android:textColor="@color/colorSecondaryText"
            android:textSize="11sp"
            android:layout_centerInParent="true" />
        <View
            android:layout_width="253dp"
            android:layout_height="1dp"
            android:background="@color/colorLineLight"
            android:id="@+id/view2"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/lyt_title"
        android:layout_marginTop="23dp"
        android:paddingLeft="42dp"
        android:paddingRight="42dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:background="@drawable/layout_input_shape">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:id="@+id/textView6"
                android:textColor="@color/colorLabel"
                android:textSize="15.4sp"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true" />

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:id="@+id/imageView5"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/icon_select_icon" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_user_name"
                android:layout_alignParentTop="false"
                android:layout_toRightOf="@+id/textView6"
                android:layout_toLeftOf="@+id/imageView5"
                android:background="#00000000"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:imeOptions="actionNext"
                android:textSize="16sp"
                android:singleLine="true"
                android:layout_centerVertical="true" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:background="@drawable/layout_input_shape"
            android:layout_marginTop="7dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relation"
                android:id="@+id/textView7"
                android:textColor="@color/colorLabel"
                android:textSize="15.4sp"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_user_relation"
                android:layout_alignParentTop="false"
                android:layout_toRightOf="@+id/textView7"
                android:background="#00000000"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:imeOptions="actionNext"
                android:textSize="16sp"
                android:singleLine="true"
                android:layout_centerVertical="true" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:background="@drawable/layout_input_shape"
            android:layout_marginTop="7dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/certification"
                android:id="@+id/textView8"
                android:textColor="@color/colorLabel"
                android:textSize="15.4sp"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_user_certification"
                android:layout_alignParentTop="false"
                android:layout_toRightOf="@+id/textView8"
                android:background="#00000000"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:textSize="16sp"
                android:singleLine="true"
                android:layout_centerVertical="true" />

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/next"
            android:id="@+id/btn_next"
            android:textColor="@color/colorBackground"
            android:background="@drawable/btn_full_selector"
            android:textSize="15.4sp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical|center_horizontal"
            android:clickable="true"/>
    </RelativeLayout>
</RelativeLayout>
